<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/video_list"
        style="@style/TopTitleStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/video_list_name"
            style="@style/SecondTitleStyle"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/video_list_name2"
            style="@style/SecondTitleStyle"
            android:layout_weight="1.5"/>
    </LinearLayout>
    <ListView
        android:id="@+id/videoListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</LinearLayout>