<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/photoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/photo_area"
        android:src="@drawable/nophoto"
        android:scaleType="fitXY"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top">
        <TextView
            android:id="@+id/photoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_photo"
            style="@style/TextInfoStyle"/>
        <TextView
            android:id="@+id/photoName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photoName"
            android:layout_alignStart="@id/photoName"
            style="@style/TextInfoStyle"/>
        <TextView
            android:id="@+id/photoName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photoName2"
            android:layout_alignStart="@+id/photoName2"
            style="@style/TextInfoStyle"/>
        <TextView
            android:id="@+id/photoNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            style="@style/TextInfoStyle"/>
        <TextView
            android:id="@+id/photoState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            style="@style/TextInfoStyle"/>
        <ImageView
            android:id="@+id/toLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_left"
            android:contentDescription="@string/left_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:id="@+id/toRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/to_right"
            android:contentDescription="@string/right_button"
            android:layout_alignTop="@id/toLeft"
            android:layout_alignParentEnd="true"/>
        <ImageView
            android:id="@+id/photoSign"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/sign"
            android:src="@drawable/wrong"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</FrameLayout>