<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hzcec.www.flashlight.MainActivity">
    <ImageView
        android:id="@+id/previewPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/camera_preview"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/nophoto"/>
    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/photoTakeBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorTranslucence">
            <ImageView
                android:id="@+id/takeImage"
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/take_photo"
                android:src="@drawable/take_photo"
                android:layout_margin="5sp"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/take_photo"
                android:textColor="@color/colorWhite"
                android:textSize="35sp"
                android:gravity="center"
                android:layout_toEndOf="@id/takeImage"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/photoCheckBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorTranslucence"
            android:gravity="center_vertical"
            android:visibility="gone">
            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/returnImage"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:contentDescription="@string/return_back"
                android:src="@drawable/back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/colorWhite"
                android:text="@string/return_back"/>
            <Space
                android:layout_width="60dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/takeImage2"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:contentDescription="@string/up_load"
                android:src="@drawable/ok"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/confirm"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <TextView
            android:id="@+id/uPhotoNum"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/colorLightGreen"
            style="@style/TextInfoStyle"
            android:layout_above="@+id/photoTakeBar"
            android:layout_toEndOf="@+id/photoCheckBar"
            android:layout_marginBottom="3dp" />
        <ProgressBar
            android:id="@+id/uploadSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>
    </RelativeLayout>
</FrameLayout>